Name:          klacz2
Version:       0.0.0
-- Category:      Network
Synopsis:      New implementation of Klacz IRC bot
Maintainer:    Adam Michalik <adam@michalik.es>
Author:        Adam Michalik <adam@michalik.es>
Copyright:     (c) 2013 Adam Michalik
License:       GPL-3
Build-type:    Simple
Cabal-version: >= 1.6
Description:
  New implementation of Klacz IRC bot.



Executable klacz2
  Build-depends:  base >= 4 && < 5, fastirc >= 0.3.0, containers,
                  mtl, network-fancy, transformers, bytestring,
                  attoparsec, persistent, persistent-postgresql
  Main-is:        Main.hs
